--- a/appStyle.css
+++ b/appStyle.css
@@ -1,14 +1,14 @@
 /* наводим курсор на кнопки*/
 QPushButton:hover {
-    min-width: 16 px;
-    min-height: 20 px;
+    min-width: 16px;
+    min-height: 20px;
     background: qlineargradient(x1:0, y1:0, x2:1, y2:1, stop:0 #4763FF, stop:1 #00FF00);
     border-radius: 5px;
 }
 
 QPushButton {
-    min-width: 16 px;
-    min-height: 20 px;
+    min-width: 16px;
+    min-height: 20px;
     color: white;
     background: qlineargradient(x1:0, y1:0, x2:1, y2:1, stop:0 #C0C0C0, stop:1 #00A5FF);
     border-radius: 5px;
@@ -34,13 +34,13 @@ QSlider:handle:horizontal {
     border-radius: 5px;
 }
 
-QLabel {
+.QLabel {
     color: white;
     font-family: "Comic Sans MS";
 }
 
 .SoundPlayer {
-    background: qlineargradient(x1:0, y:0, x2:1, y:0, stop:0 #000000, stop:0.5 #255, stop:1 #000000);
+    background: qlineargradient(x1:0, y:0, x2:1, y:0, stop:0 #000000, stop: 0.2 #255 stop:0.5 #C1B6FF, stop:0.8 #255 stop:1 #000000);
     border: 2px solid white;
     border-radius: 20px;
 }
