--- a/aboutStyle.css
+++ b/aboutStyle.css
@@ -1,6 +1,7 @@
 QDialog {
     background: qlineargradient(x1:0, y:0, x2:1, y:0, stop:0 #000000, stop: 0.2 #255 stop:0.5 #C1B6FF, stop:0.8 #255 stop:1 #000000);
-    border: 2px solid white;
+    border: 2px solid #C1B6FF;
+    border-radius: 7px;
 }
 
 .QPushButton {
