--- a/appStyle.css
+++ b/appStyle.css
@@ -147,6 +147,34 @@ QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
     border: 1px solid black;
 }
 
+/* Горизонтальный скролл*/
+QScrollBar:horizontal {
+    border: 1px solid white;
+    background: white;
+    height: 15px;
+    margin: 0px 20px 0 20px;
+}
+
+QScrollBar::handle:horizontal {
+    background: qlineargradient(x1:0, y1:0, x2:1, y2:1, stop:0 #00FFFF, stop:1 #0000FF);
+    border-radius: 4px;
+    min-width: 5px;
+}
+QScrollBar::add-line:horizontal {
+    border: 1px solid white;
+    background: #C0C0C0;
+    width: 20px;
+    subcontrol-position: right;
+    subcontrol-origin: margin;
+}
+
+QScrollBar::sub-line:horizontal {
+    border: 1px solid white;
+    background: #C0C0C0;
+    width: 20px;
+    subcontrol-position: left;
+    subcontrol-origin: margin;
+}
 
 
 
