--- a/menuStyle.css
+++ b/menuStyle.css
@@ -1,2 +1,40 @@
+/*Дизайн меню*/
 
+QMenu {
+    background: qlineargradient(x1:0, y1:0, x2:1, y2:1, stop:0 #1E69D2, stop:1 #C4E4FF);
+    color: white;
+    border: 2px solid black;
+    border-radius: 5px;
+    font-family: "Comic Sans MS";
+}
+
+QMenu::item:selected {
+   background: #F0FBFF;
+   color:black;
+   border-radius: 2px;
+}
+
+QMenu::item:pressed {
+   background: #C0C0C0;
+   border-radius: 2px;
+}
+
+SystemTrayMenu {
+    background: qlineargradient(x1:0, y1:0, x2:1, y2:1, stop:0 #1E69D2, stop:1 #C4E4FF);
+    color: white;
+    border: 2px solid black;
+    border-radius: 5px;
+    font-family: "Comic Sans MS";
+}
+
+SystemTrayMenu::item:selected {
+   background: #F0FBFF;
+   color:black;
+   border-radius: 2px;
+}
+
+SystemTrayMenu::item:pressed {
+   background: #C0C0C0;
+   border-radius: 2px;
+}
 
